--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "js-log",
   "version": "0.0.1",
+  "homepage": "http://js-log.cardone.top",
+  "repository": "https://github.com/yht-fand/js-log",
   "author": "yao hai tao",
   "description": "js-log",
+  "license": "MIT",
   "dependencies": {
-    "gulp": "latest",
-    "gulp-uglify": "latest",
-    "gulp-concat": "latest",
-    "gulp-rename": "latest",
-    "gulp-clean": "latest"
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-plumber": "^1.0.1",
+    "jshint": "^2.8.0"
   }
 }
